Fix selectionMenu overflowing gameboard

--- a/src/SelectionMenu/SelectionMenu.module.css
+++ b/src/SelectionMenu/SelectionMenu.module.css
@@ -1,9 +1,16 @@
 .selmenu {
-  display: grid;
+  display: flex;
   justify-items: center;
-  gap: 0.5rem;
+  gap: 0.2rem;
   width: fit-content;
   position: absolute;
+}
+
+.characters {
+  display: grid;
+  justify-items: center;
+  gap: 0.2rem;
+  width: fit-content;
 }
 
 .mcharacter {
